[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/editor/inspector_types/angle.gd" type="Script" id=1]
[ext_resource path="res://tools/editor/inspector_types/AngleEdit.gd" type="Script" id=2]
[ext_resource path="res://tools/editor/HBEditorMultiSpinBox.gd" type="Script" id=3]

[node name="Angle" type="HBoxContainer"]
margin_right = 151.0
margin_bottom = 64.0
script = ExtResource( 1 )

[node name="AngleEdit" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start_angle = 0

[node name="Spinbox" type="MultiSpinBox" parent="."]
margin_left = 68.0
margin_top = 20.0
margin_right = 151.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 4
suffix = "ยบ"
min = inf_neg
script = ExtResource( 3 )

[connection signal="angle_changed" from="AngleEdit" to="." method="_on_angle_changed"]
[connection signal="angle_finished_changing" from="AngleEdit" to="." method="_on_AngleEdit_angle_finished_changing"]
